@@ -1,6 +1,11 @@
 3.12.5.3 (XXXX-XX-XX)
 ---------------------
 
+* Fix BTS-2217: If an error happens during startup, a disabled feature can
+  lead to a crash. Additionally signal that the server is stopping during
+  the unexpected shutdown so that in particular the RocksDBSyncThread does
+  not crash with an assertion failure.
+
 * Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
   This was caused by key generation now using the cluster key
   generator on dbservers, which fails during upgrade with a message that
